# mozilla-addons-to-nix

./: .build.yml  .gitignore  .gitlab-ci.yml  ChangeLog.md  README.md  default.nix  flake.nix  mozilla-addons-to-nix.cabal  nixpkgs-firefox-addons.cabal  shell.nix
data/: firefox-addons.nix
src/: Main.hs  Prelude.hs
src/System/Nixpkgs/: FirefoxAddons.hs
