cabal-version:      2.2
name:               mozilla-addons-to-nix
version:            0.8.1
synopsis:           Tool generating a Nix package set of Firefox addons
homepage:           https://git.sr.ht/~rycee/mozilla-addons-to-nix
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Robert Helgesson <robert@rycee.net>
maintainer:         Robert Helgesson <robert@rycee.net>
category:           System
build-type:         Simple
extra-source-files: ChangeLog.md

executable mozilla-addons-to-nix
  main-is:          Main.hs
  other-modules:    System.Nixpkgs.FirefoxAddons
  build-depends:
    , aeson
    , base                >=4.11
    , directory
    , hnix                >=0.13
    , microlens-aeson
    , microlens-platform
    , relude              >=1.0.0
    , wreq                >=0.5

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
