name:                nixpkgs-firefox-addons
version:             0.2.0
synopsis:            Tool generating a Nix package set of Firefox addons
-- description:
homepage:            https://gitlab.com/rycee/nixpkgs-firefox-addons
license:             GPL-3
license-file:        LICENSE
author:              Robert Helgesson
maintainer:          robert@rycee.net
-- copyright:
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable nixpkgs-firefox-addons
  main-is:             Main.hs
  other-modules:       Prelude, System.Nixpkgs.FirefoxAddons
  build-depends:
                aeson
              , base-noprelude >=4.11
              , directory
              , hnix >= 0.5
              , lens
              , lens-aeson
              , relude >= 0.4.0
              , text
              , wreq >= 0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
